# rustmc

./: Cargo.toml  README.md
src/: config.rs  error.rs  kldfmlkdsfmlds.rs  main.rs  packet.rs  server.rs
